# AstraForge

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER_CUSTOMIZATION.md  Dockerfile  Makefile  README.md  SECURITY.md  architecture.md  docker-compose.hybrid.yml  docker-compose.override.yml.example  docker-compose.test.yml  docker-compose.yml  gitleaks.toml  package.json  pnpm-lock.yaml
astraforge-python-package/: README.md  pyproject.toml
astraforge-python-package/astraforge_sandbox_backend/: __init__.py  backend.py  client.py
astraforge-python-package/astraforge_toolkit/: __init__.py  backend.py  client.py  tools.py
astraforge-python-package/examples/: local_api_test.ipynb
astraforge-python-package/tests/: test_backend_autorestore.py  test_client.py
backend/: Dockerfile  README.md  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/astraforge/: bootstrap.py
backend/astraforge/accounts/: admin.py  apps.py  emails.py  models.py  signals.py
backend/astraforge/accounts/migrations/: 0001_initial.py  0002_apikey_uuid_primary_key.py  0003_useraccess_waitlist.py  0004_useraccess_waitlist_email.py  0005_workspace_and_members.py  0006_workspace_plan_and_quota_fields.py  0007_alter_useraccess_created_at_and_more.py
backend/astraforge/application/: tasks.py  use_cases.py
backend/astraforge/astra_control/: checkpointer.py  graph.py  models.py  serializers.py  state.py  tasks.py  tests.py  tools.py  urls.py  views.py
backend/astraforge/astra_control/migrations/: 0001_initial.py  0002_astracontrolsession_last_snapshot_id.py  0003_alter_astracontrolsession_status.py
backend/astraforge/computer_use/: __init__.py  apps.py  browser.py  decision_providers.py  models.py  policy.py  protocol.py  replay.py  runner.py  service.py  trace.py
backend/astraforge/computer_use/migrations/: 0001_initial.py  0002_rename_computer_use_status_idx_computer_us_status_f1a78f_idx_and_more.py
backend/astraforge/config/: __init__.py  asgi.py  celery_app.py  settings.py  urls.py  wsgi.py
backend/astraforge/domain/events/: base.py
backend/astraforge/domain/models/: request.py  spec.py  workspace.py
backend/astraforge/domain/providers/: interfaces.py
backend/astraforge/infrastructure/: cpu_usage.py
backend/astraforge/infrastructure/ai/: deepagent_runtime.py  google_genai.py  image_tools.py  mr_author.py  playwright_tools.py  python_repl_tools.py  serializers.py  shell_tools.py  spec_generator.py  tavily_tools.py
backend/astraforge/infrastructure/connectors/: base.py  email.py  glitchtip.py  jira.py  teams.py
backend/astraforge/infrastructure/event_bus/: memory.py  redis_streams.py
backend/astraforge/infrastructure/executors/: base.py  claude.py  codex.py  opencoder.py
backend/astraforge/infrastructure/provisioners/: docker.py  k8s.py
backend/astraforge/infrastructure/repositories/: __init__.py  db.py  memory.py
backend/astraforge/integrations/: apps.py  models.py
backend/astraforge/quotas/: __init__.py  apps.py  models.py  services.py
backend/astraforge/requests/: __init__.py  apps.py  models.py
backend/astraforge/sandbox/: __init__.py  apps.py  deepagent_backend.py  models.py  reaper.py  serializers.py  services.py  tasks.py  views.py
backend/astraforge/tests/: test_api_keys.py  test_auth.py  test_codex_workspace.py  test_codex_wrapper_config.py  test_computer_use_runner.py  test_computer_use_trace_api.py  test_container.py  test_deepagent_runtime.py  test_domain.py  test_k8s_provisioner.py  test_marketing.py  test_redis_run_log_streamer.py  test_registry.py  test_renderers.py  test_repository_links.py  test_requests.py  test_sandbox_autorestore.py  test_sandbox_cpu_usage.py  test_sandbox_quotas.py  test_sandbox_reaper.py  test_sandbox_services.py  test_sandbox_snapshots.py  test_serializers.py  test_workspace_usage.py  test_workspaces.py
backend/codex_cli_stub/: Dockerfile
llm-proxy/: Dockerfile  pyproject.toml
llm-proxy/app/: main.py
llm-proxy/app/tests/: test_provider_proxy.py  test_raw_proxy.py  test_responses.py
sandbox-backend-client/: README.md  pyproject.toml
sandbox-backend-client/astraforge_sandbox_backend/: __init__.py  backend.py  client.py
(+189 files in other folders)
