[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astraforge-toolkit"
version = "0.1.4"
description = "HTTP client and sandbox backend for AstraForge DeepAgent."
authors = [
  { name = "AstraForge Contributors", email = "jeremy.jouvance@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32",
  "deepagents>=0.2.8",  
]

[project.optional-dependencies]
dev = [
  "pytest",
  "types-requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["astraforge_toolkit*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
