[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astraforge-llm-proxy"
version = "0.1.0"
description = "Sidecar service proxying requests to OpenAI for AstraForge."
authors = [
  { name = "AstraForge Contributors", email = "opensource@astraforge.dev" }
]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "openai>=1.25",
  "httpx>=0.27",
  "pydantic>=2.6",
  "python-dotenv>=1.0"
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.setuptools.packages.find]
where = ["app"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
